--- a/photos/index.html
+++ b/photos/index.html
@@ -4,7 +4,8 @@
   <title>Photos</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" href="style.css" type="text/css">
-  <script type="text/javascript" src="rotate.js"></script>
+  <script type="text/javascript" src="carousel.js"></script>
+  <script type="text/javascript" src="library.js"></script>
  </head>
  <body>
    <div id="photos">
